support_tools/swigwin-3.0.12/Examples/test-suite/errors/swig_typemap_old.i
%module xxx

%typemap(in) int x {
   $source;
   $target;
}
